--- a/ai-api-interfaces/pom.xml
+++ b/ai-api-interfaces/pom.xml
@@ -93,7 +93,7 @@
     </dependencies>
 
     <build>
-        <finalName>chatbot-api</finalName>
+        <finalName>ai-api</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
