--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>ai-api-application</module>
         <module>ai-api-interfaces</module>
         <module>ai-api-infrastructure</module>
+        <module>ai-api-common</module>
     </modules>
 
     <properties>
@@ -95,7 +96,7 @@
     </dependencyManagement>
 
     <build>
-        <finalName>chatbot-api</finalName>
+        <finalName>ai-api</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
